--- a/examples/X_portfolio_coverage.ipynb
+++ b/examples/X_portfolio_coverage.ipynb
@@ -73,14 +73,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create a data provider\n",
-    "Data providers let you connect to the data source of your choice. In this case we are connecting to Excel as a data provider. For all available dataproviders check the implementation [here](https://github.com/ScienceBasedTargets/SBTi-finance-tool/tree/master/SBTi/data)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Load your portfolio\n",
     "In our case the portfolio is stored as a CSV file. The portfolio should at least have an \"id\" (the identifier of the company) and a \"proportion\" (the weight of the company in your portfolio e.g. the value of the shares you hold) column. To calculate the weighted portfolio coverage the data also needs to include identifers for the portfolios constituents, preferably LEI, but also ISIN is recognized by the SBTi data.\n",
     "\n",
@@ -99,7 +91,15 @@
    "source": [
     "#Note additional checks: verify uniqueness of comapnies in the portfolio\n",
     "df_portfolio = pd.read_csv(\"data/example_portfolio.csv\", encoding=\"iso-8859-1\")\n",
-    "df_portfolio.rename(columns={'company_isin': 'ISIN', 'company_lei': 'LEI'}, inplace=True)"
+    "df_portfolio.rename(columns={'company_isin': 'ISIN', 'company_lei': 'LEI'}, inplace=True)\n",
+    "# Check for duplicate values in the 'company_id' column\n",
+    "duplicate_ids = df_portfolio[df_portfolio.duplicated('company_id', keep=False)]\n",
+    "\n",
+    "if not duplicate_ids.empty:\n",
+    "    print(\"Error: Duplicate values found in the 'company_id' column:\")\n",
+    "    print(duplicate_ids)\n",
+    "else:\n",
+    "    print(\"No duplicate values found in the 'comapny_id' column.\")"
    ]
   },
   {
@@ -220,10 +220,10 @@
    "outputs": [],
    "source": [
     "# Convert the \"Date Published\" column to datetime type\n",
-    "df_nt_targets.loc[:,'Date Published'] = pd.to_datetime(df_nt_targets['Date Published'])\n",
-    "\n",
+    "df_targets = df_nt_targets.copy()\n",
+    "df_targets['Date Published'] = pd.to_datetime(df_targets['Date Published'])\n",
     "# Filter rows based on user-entered date\n",
-    "filtered_df = df_nt_targets.loc[df_nt_targets['Date Published'] <= user_date]"
+    "filtered_df = df_targets.loc[df_targets['Date Published'] <= user_date]"
    ]
   },
   {
