added file saving

--- a/examples/X_portfolio_coverage.ipynb
+++ b/examples/X_portfolio_coverage.ipynb
@@ -99,7 +99,7 @@
     "    print(\"Error: Duplicate values found in the 'company_id' column:\")\n",
     "    print(duplicate_ids)\n",
     "else:\n",
-    "    print(\"No duplicate values found in the 'comapny_id' column.\")"
+    "    print(\"No duplicate values found in the 'company_id' column.\")"
    ]
   },
   {
@@ -286,6 +286,23 @@
     "    raise ValueError(\"The portfolio weight is not allowed to be zero\")\n",
     "pc_result = round(pc_weighted.sum(), 2)\n",
     "print(f\"Portfolio coverage is: {pc_result*100}%.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save the portfolio\n",
+    "If you want to save the portfolio, you can use the following code in the following cell. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_portfolio.to_csv('validated_portfolio.csv', index=False)"
    ]
   }
  ],
