changed directory for saved portf.

--- a/examples/X_portfolio_coverage.ipynb
+++ b/examples/X_portfolio_coverage.ipynb
@@ -302,7 +302,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_portfolio.to_csv('validated_portfolio.csv', index=False)"
+    "df_portfolio.to_csv('data/validated_portfolio.csv', index=False)"
    ]
   }
  ],
