Update to writer in NB #5

--- a/examples/5_reporting.ipynb
+++ b/examples/5_reporting.ipynb
@@ -393,11 +393,9 @@
     "provider_filename = 'provider.xlsx'\n",
     "portfolio.to_excel(portfolio_filename, index=False)\n",
     "\n",
-    "writer = pd.ExcelWriter(provider_filename, engine='openpyxl')\n",
-    "provider.data['fundamental_data'].to_excel(writer, sheet_name='fundamental_data')\n",
-    "provider.data['target_data'].to_excel(writer, sheet_name='target_data')\n",
-    "with writer:\n",
-    "    pass"
+    "with pd.ExcelWriter(provider_filename, engine='openpyxl') as writer:\n",
+    "    provider.data['fundamental_data'].to_excel(writer, sheet_name='fundamental_data')\n",
+    "    provider.data['target_data'].to_excel(writer, sheet_name='target_data')\n"
    ]
   },
   {
