Updates post TVT test

--- a/examples/X_portfolio_coverage.ipynb
+++ b/examples/X_portfolio_coverage.ipynb
@@ -37,7 +37,7 @@
    "metadata": {},
    "source": [
     "## Create the data directory and download the example portfolio\n",
-    "We have prepared dummy data for you to be able to run the tool as it is to familiarise yourself with how it works. To use your own data; please check out to the [Data Requirements section](https://sciencebasedtargets.github.io/SBTi/DataRequirements.html) of the technical documentation for more details on data requirements and formatting. \n",
+    "We have prepared dummy data for you to be able to run the tool as it is to familiarise yourself with how it works. To use your own data; please check out to the [Data Requirements section](https://sciencebasedtargets.github.io/SBTi-finance-tool/DataRequirements.html) of the technical documentation for more details on data requirements and formatting. \n",
     "\n",
     "*The dummy data may include some company names, but the data associated with those company names is completely random and any similarities with real world data is purely coincidental. \n"
    ]
@@ -74,9 +74,45 @@
    "metadata": {},
    "source": [
     "## Load your portfolio\n",
-    "In our case the portfolio is stored as a CSV file. The portfolio should at least have an \"id\" (the identifier of the company) and a \"proportion\" (the weight of the company in your portfolio e.g. the value of the shares you hold) column. To calculate the weighted portfolio coverage the data also needs to include identifers for the portfolios constituents, preferably LEI, but also ISIN is recognized by the SBTi data.\n",
+    "The example portfolio is stored as a CSV file. Alternatively, you can upload an .xlsx file, just choose one of the loading options below.\n",
     "\n",
-    "Please see the technical documentation on [Data Legends](https://sciencebasedtargets.github.io/SBTi/Legends.html#) for details on data requirements. "
+    "The portfolio should at least have an \"id\" (the identifier of the company) and a \"proportion\" (the weight of the company in your portfolio e.g. the value of the shares you hold) column. To calculate the weighted portfolio coverage the data also needs to include identifers for the portfolios constituents, preferably LEI, but also ISIN is recognized by the SBTi data.\n",
+    "\n",
+    "Please see the technical documentation on [Data Legends](https://sciencebasedtargets.github.io/SBTi-finance-tool/Legends.html#) for details on data requirements. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load the portfolio from a CSV file\n",
+    "Enter the path to your portfolio CSV file inside the quotation marks below. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_portfolio = pd.read_csv(\"data/example_portfolio.csv\", encoding=\"iso-8859-1\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Or, load the portfolio from an Excel file\n",
+    "Enter the path to the Excel file containing the portfolio data inside the quotation marks below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_portfolio = pd.read_excel(\"data/example_portfolio.xlsx\")"
    ]
   },
   {
@@ -89,8 +125,7 @@
    },
    "outputs": [],
    "source": [
-    "#Note additional checks: verify uniqueness of comapnies in the portfolio\n",
-    "df_portfolio = pd.read_csv(\"data/example_portfolio.csv\", encoding=\"iso-8859-1\")\n",
+    "# Change the column names to match the API\n",
     "df_portfolio.rename(columns={'company_isin': 'ISIN', 'company_lei': 'LEI'}, inplace=True)\n",
     "# Check for duplicate values in the 'company_id' column\n",
     "duplicate_ids = df_portfolio[df_portfolio.duplicated('company_id', keep=False)]\n",
