Update to notebook X

--- a/examples/X_portfolio_coverage.ipynb
+++ b/examples/X_portfolio_coverage.ipynb
@@ -65,16 +65,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Logging\n",
-    "The SBTi module uses the Python standard library logging utilities to send log messages. The log level can be changed according to the user's needs."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Load your portfolio\n",
     "The example portfolio is stored as a CSV file. Alternatively, you can upload an .xlsx file, just choose one of the loading options below.\n",
+    "\n",
+    "You can upload your portfolio file using the folder icon on the left hand side of the screen. Once you have uploaded your file, you can load it into the notebook using the code below.\n",
     "\n",
     "The portfolio should at least have an \"id\" (the identifier of the company) and a \"proportion\" (the weight of the company in your portfolio e.g. the value of the shares you hold) column. To calculate the weighted portfolio coverage the data also needs to include identifers for the portfolios constituents, preferably LEI, but also ISIN is recognized by the SBTi data.\n",
     "\n",
@@ -85,8 +79,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load the portfolio from a CSV file\n",
-    "Enter the path to your portfolio CSV file inside the quotation marks below. "
+    "### Load the portfolio from a CSV file or an xls/xlsx file\n",
+    "Enter the path to your portfolio file inside the quotation marks below. Then remove the # at the beginning of the appropriate line and run the cell."
    ]
   },
   {
@@ -95,24 +89,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_portfolio = pd.read_csv(\"data/example_portfolio.csv\", encoding=\"iso-8859-1\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Or, load the portfolio from an Excel file\n",
-    "Enter the path to the Excel file containing the portfolio data inside the quotation marks below."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_portfolio = pd.read_excel(\"data/example_portfolio.xlsx\")"
+    "#df_portfolio = pd.read_csv(\"data/example_portfolio.csv\", encoding=\"iso-8859-1\")\n",
+    "#df_portfolio = pd.read_excel(\"data/example_portfolio.xlsx\")"
    ]
   },
   {
