Changed to .csv in NB

--- a/examples/Simple_portfolio_coverage.ipynb
+++ b/examples/Simple_portfolio_coverage.ipynb
@@ -99,8 +99,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df_portfolio = pd.read_csv(\"data/example_portfolio.csv\", encoding=\"iso-8859-1\")\n",
-    "df_portfolio = pd.read_excel(\"data/example_portfolio.xlsx\", engine=\"openpyxl\")"
+    "df_portfolio = pd.read_csv(\"data/example_portfolio.csv\", encoding=\"iso-8859-1\")\n",
+    "#df_portfolio = pd.read_excel(\"data/example_portfolio.xlsx\", engine=\"openpyxl\")"
    ]
   },
   {
