Fixed filtering error in NB

--- a/examples/Simple_portfolio_coverage.ipynb
+++ b/examples/Simple_portfolio_coverage.ipynb
@@ -246,7 +246,8 @@
     "df_targets = df_nt_targets.copy()\n",
     "df_targets['Date Published'] = pd.to_datetime(df_targets['Date Published'])\n",
     "# Filter rows based on user-entered date\n",
-    "filtered_df = df_targets.loc[df_targets['Date Published'] <= user_date]"
+    "filtered_df = df_targets.loc[df_targets['Date Published'] <= user_date]\n",
+    "filtered_df = filtered_df[filtered_df['ISIN'].notnull() & filtered_df['LEI'].notnull()]"
    ]
   },
   {
