Minor corrections and bump version

--- a/examples/Simple_portfolio_coverage.ipynb
+++ b/examples/Simple_portfolio_coverage.ipynb
@@ -78,7 +78,7 @@
     "company_isin : The ISIN of the company in your portfolio, used to identify the company e.g. for SBTi status *  \n",
     "company_lei : Legal Entity Identifier for the company in your portfolio, used identify the company e.g. for SBTi status *  \n",
     "investment_value: Needed to weight the portfolio coverage by the value of the investment in the company  \n",
-    "engagement_targets: Not needed for the tool to run but is included to be compatible with the finance tool portfolio format  \n",
+    "engagement_target: Not needed for the tool to run but is included to be compatible with the finance tool portfolio format  \n",
     "\n",
     "\\* These rows may be left blank but are needed to check the SBTi status of the company. If you do not have this data, please leave the rows blank and the tool will still run, but the SBTi status will not be included in the output.\n",
     "\n",
