Updated link to directly download the latest CTA table from the SBTi website.

--- a/examples/Simple_portfolio_coverage.ipynb
+++ b/examples/Simple_portfolio_coverage.ipynb
@@ -175,7 +175,7 @@
    },
    "outputs": [],
    "source": [
-    "CTA_FILE_URL = \"https://sciencebasedtargets.org/download/target-dashboard\"\n",
+    "CTA_FILE_URL = \"https://cdn.sciencebasedtargets.org/download/target-dashboard\"\n",
     "resp = requests.get(CTA_FILE_URL)\n",
     "if resp.status_code != 200:\n",
     "    raise ValueError(\"Could not download CTA file\")\n",
