--- a/examples/Simple_portfolio_coverage.ipynb
+++ b/examples/Simple_portfolio_coverage.ipynb
@@ -75,8 +75,8 @@
     "\n",
     "company_name: Name of the company in your portfolio - each row must have a unique name  \n",
     "company_id : Unique identifier for the company in your portfolio  \n",
-    "company_isin : The ISIN of the company in your portfolio, used to identify the company e.g. for SBTi status *  \n",
-    "company_lei : Legal Entity Identifier for the company in your portfolio, used identify the company e.g. for SBTi status *  \n",
+    "isin : The ISIN of the company in your portfolio, used to identify the company e.g. for SBTi status *  \n",
+    "lei : Legal Entity Identifier for the company in your portfolio, used identify the company e.g. for SBTi status *  \n",
     "investment_value: Needed to weight the portfolio coverage by the value of the investment in the company  \n",
     "target: Not needed for the tool to run but is included to be compatible with the finance tool portfolio format, used to reference if any company with LEI, ISIN, or exact matching name from the SBTi Companies Taking Action table\n",
     "\n",
