--- a/examples/Simple_portfolio_coverage.ipynb
+++ b/examples/Simple_portfolio_coverage.ipynb
@@ -99,14 +99,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df_portfolio = pd.read_csv(\"data/example_portfolio.csv\", encoding=\"iso-8859-1\")\n",
+    "df_portfolio = pd.read_csv(\"data/example_portfolio.csv\", encoding=\"iso-8859-1\")\n",
     "# Use your file instead\n",
     "#df_portfolio = pd.read_excel(\"data/example_portfolio.xlsx\", engine=\"openpyxl\") # .xlsx format\n",
     "\n",
     "#Use your local file instead\n",
     "#my_file_path = \"path/to/your/portfolio_file.csv\"\n",
-    "my_file_path = \"/Users/hunterbell/Code/SBTi FI Tool/SBTi-finance-tool/examples/data/example_portfolio.csv\"\n",
-    "df_portfolio = pd.read_csv(my_file_path, encoding=\"utf-8\")"
+    "#my_file_path = \"//SBTi-finance-tool/examples/data/example_portfolio.csv\"\n",
+    "#df_portfolio = pd.read_csv(my_file_path, encoding=\"utf-8\")"
    ]
   },
   {
