--- a/examples/Simple_portfolio_coverage.ipynb
+++ b/examples/Simple_portfolio_coverage.ipynb
@@ -22,14 +22,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datetime import datetime\n",
+    "# Ensure required packages are installed\n",
     "import pandas as pd\n",
+    "import openpyxl\n",
     "import requests\n",
-    "import openpyxl"
+    "from datetime import datetime\n",
+    "import re\n",
+    "from difflib import SequenceMatcher\n"
    ]
   },
   {
@@ -44,21 +47,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "pycharm": {
-     "is_executing": false
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "import urllib.request\n",
     "import os\n",
     "\n",
     "if not os.path.isdir(\"data\"):\n",
     "    os.mkdir(\"data\")\n",
     "if not os.path.isfile(\"data/example_portfolio.csv\"):\n",
-    "    urllib.request.urlretrieve(\"https://github.com/ScienceBasedTargets/SBTi-finance-tool/raw/main/examples/data/example_portfolio.csv\", \"data/example_portfolio.csv\")"
+    "    urllib.request.urlretrieve(\"https://github.com/ScienceBasedTargets/SBTi-finance-tool/raw/main/examples/data/example_portfolio.csv\", \"data/example_portfolio.csv\")\n"
    ]
   },
   {
@@ -70,15 +70,15 @@
     "\n",
     "You can upload your portfolio file using the folder icon on the left hand side of the screen. Once you have uploaded your file, you can load it into the notebook using the code below.\n",
     "\n",
-    "The portfolio should at least have an \"id\" (the identifier of the company) and a \"proportion\" (the weight of the company in your portfolio e.g. the value of the shares you hold) column. To calculate the weighted portfolio coverage the data also needs to include identifers for the portfolios constituents, preferably LEI, but also ISIN is recognized by the SBTi data.\n",
+    "The portfolio should at least have an \"id\" (the identifier of the company) and a \"proportion\" (the weight of the company in your portfolio e.g. the value of the shares you hold) column. To calculate the weighted portfolio coverage the data also needs to include identifers for the portfolios constituents, preferably LEI, but ISIN and exact matching entity names are recognized by the SBTi data.\n",
     "The following column names headers are required to upload the file to the tool, please note the the tool will not run unless these exact headers are included:\n",
     "\n",
     "company_name: Name of the company in your portfolio - each row must have a unique name  \n",
     "company_id : Unique identifier for the company in your portfolio  \n",
-    "company_isin : The ISIN of the company in your portfolio, used to identify the company e.g. for SBTi status *  \n",
-    "company_lei : Legal Entity Identifier for the company in your portfolio, used identify the company e.g. for SBTi status *  \n",
+    "isin : The ISIN of the company in your portfolio, used to identify the company e.g. for SBTi status *  \n",
+    "lei : Legal Entity Identifier for the company in your portfolio, used identify the company e.g. for SBTi status *  \n",
     "investment_value: Needed to weight the portfolio coverage by the value of the investment in the company  \n",
-    "engagement_target: Not needed for the tool to run but is included to be compatible with the finance tool portfolio format  \n",
+    "target: Not needed for the tool to run but is included to be compatible with the finance tool portfolio format, used to reference if any company with LEI, ISIN, or exact matching name from the SBTi Companies Taking Action table\n",
     "\n",
     "\\* These rows may be left blank but are needed to check the SBTi status of the company. If you do not have this data, please leave the rows blank and the tool will still run, but the SBTi status will not be included in the output.\n",
     "\n",
@@ -99,13 +99,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_portfolio = pd.read_csv(\"data/example_portfolio.csv\", encoding=\"iso-8859-1\")\n",
-    "#df_portfolio = pd.read_excel(\"data/example_portfolio.xlsx\", engine=\"openpyxl\")"
+    "#df_portfolio = pd.read_csv(\"data/example_portfolio.csv\", encoding=\"iso-8859-1\")\n",
+    "# Use your file instead\n",
+    "#df_portfolio = pd.read_excel(\"data/example_portfolio.xlsx\", engine=\"openpyxl\") # .xlsx format\n",
+    "\n",
+    "#Use your local file instead\n",
+    "#my_file_path = \"path/to/your/portfolio_file.csv\"\n",
+    "my_file_path = \"/Users/hunterbell/Code/SBTi FI Tool/SBTi-finance-tool/examples/data/example_portfolio.csv\"\n",
+    "df_portfolio = pd.read_csv(my_file_path, encoding=\"utf-8\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add this code right after loading the portfolio\n",
+    "# Convert all column names to snake_case format\n",
+    "def convert_to_snake_case(name):\n",
+    "    \"\"\"Convert any string to snake_case format\"\"\"\n",
+    "    import re\n",
+    "    # Handle CamelCase and PascalCase\n",
+    "    s1 = re.sub('(.)([A-Z][a-z]+)', r'\\1_\\2', name)\n",
+    "    s2 = re.sub('([a-z0-9])([A-Z])', r'\\1_\\2', s1)\n",
+    "    # Convert to lowercase\n",
+    "    s3 = s2.lower()\n",
+    "    # Replace spaces and other separators with underscores\n",
+    "    s4 = re.sub(r'[^a-z0-9_]', '_', s3)\n",
+    "    # Remove duplicate underscores\n",
+    "    s5 = re.sub(r'_+', '_', s4)\n",
+    "    # Remove leading and trailing underscores\n",
+    "    return s5.strip('_')\n",
+    "\n",
+    "# Apply conversion to all column names\n",
+    "original_columns = df_portfolio.columns.tolist()\n",
+    "df_portfolio.columns = [convert_to_snake_case(col) for col in df_portfolio.columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -113,8 +147,10 @@
    },
    "outputs": [],
    "source": [
-    "# Change the column names to match the API\n",
-    "df_portfolio.rename(columns={'company_isin': 'ISIN', 'company_lei': 'LEI'}, inplace=True)\n",
+    "# Change the column names to match the API if the snakecase conversion did not work\n",
+    "#df_portfolio.rename(columns={'Company Name': 'company_name', 'ISIN': 'isin'}, inplace=True)\n",
+    "\n",
+    "\n",
     "# Check for duplicate values in the 'company_id' column\n",
     "duplicate_ids = df_portfolio[df_portfolio.duplicated('company_id', keep=False)]\n",
     "\n",
@@ -122,7 +158,10 @@
     "    print(\"Error: Duplicate values found in the 'company_id' column:\")\n",
     "    print(duplicate_ids)\n",
     "else:\n",
-    "    print(\"No duplicate values found in the 'company_id' column.\")"
+    "    print(\"No duplicate values found in the 'company_id' column.\")\n",
+    "# Ensure new column 'sbti_id' is handled\n",
+    "if 'sbti_id' not in df_portfolio.columns:\n",
+    "    df_portfolio['sbti_id'] = None"
    ]
   },
   {
@@ -136,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -151,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -175,7 +214,8 @@
    },
    "outputs": [],
    "source": [
-    "CTA_FILE_URL = \"https://sciencebasedtargets.org/download/target-dashboard\"\n",
+    "CTA_FILE_URL = \"https://cdn.sciencebasedtargets.org/download/target-dashboard\"\n",
+    "\n",
     "resp = requests.get(CTA_FILE_URL)\n",
     "if resp.status_code != 200:\n",
     "    raise ValueError(\"Could not download CTA file\")\n",
@@ -196,32 +236,79 @@
    "metadata": {},
    "source": [
     "## Filter the CTA file\n",
-    "Filter the CTA file to create a dataframe that has on row per company with the columns \"Action\" and \"Target\".\n",
+    "Filter the CTA file to create a dataframe that has one row per company with the columns \"action\" and \"target\".\n",
     "If Action = Target then only keep the rows where Target = Near-term.\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Extract relevant columns from the CTA file\n",
     "targets = cta_file[\n",
-    "            [\n",
-    "                'Company Name', \n",
-    "                'ISIN',\n",
-    "                'LEI',\n",
-    "                'Action',\n",
-    "                'Target',\n",
-    "                'Date Published'\n",
-    "            ]\n",
-    "        ]\n",
-    "df_nt_targets = targets[\n",
-    "            (targets['Action'] == 'Target') & \n",
-    "            (targets['Target'] == 'Near-term')\n",
-    "            ]\n",
-    "        "
+    "    [\n",
+    "        'company_name', \n",
+    "        'isin',\n",
+    "        'lei',\n",
+    "        'action', #Old: Action\n",
+    "        'target', #Old: Target\n",
+    "        'date_published' #Old: Date Published\n",
+    "    ]\n",
+    "]\n",
+    "\n",
+    "# Filter for companies that have \"Target\" in the action field\n",
+    "companies_with_targets = targets[targets['action'] == 'Target'] \n",
+    "\n",
+    "# Get unique company names with targets\n",
+    "unique_companies_with_targets = companies_with_targets['company_name'].unique()\n",
+    "total_companies_with_targets = len(unique_companies_with_targets)\n",
+    "\n",
+    "# Total unique companies in SBTi database\n",
+    "total_companies_in_sbti = len(targets['company_name'].unique())\n",
+    "\n",
+    "# Create a new dataframe with one row per company (to avoid duplicates in counting)\n",
+    "unique_companies_df = companies_with_targets.drop_duplicates(subset=['company_name'])\n",
+    "\n",
+    "# Create sets for companies with different identifiers\n",
+    "companies_with_isin = set(unique_companies_df[unique_companies_df['isin'].notna()]['company_name'])\n",
+    "companies_with_lei = set(unique_companies_df[unique_companies_df['lei'].notna()]['company_name'])\n",
+    "\n",
+    "# Get unique ISINs and LEIs\n",
+    "all_isin_set = set(companies_with_targets['isin'].dropna())\n",
+    "all_lei_set = set(companies_with_targets['lei'].dropna())\n",
+    "\n",
+    "# Calculate the different categories\n",
+    "companies_with_both = companies_with_isin.intersection(companies_with_lei)\n",
+    "companies_with_only_isin = companies_with_isin - companies_with_both\n",
+    "companies_with_only_lei = companies_with_lei - companies_with_both\n",
+    "companies_with_neither = set(unique_companies_with_targets) - companies_with_isin - companies_with_lei\n",
+    "\n",
+    "# Count companies in each category\n",
+    "total_companies_with_both = len(companies_with_both)\n",
+    "total_companies_with_only_isin = len(companies_with_only_isin)\n",
+    "total_companies_with_only_lei = len(companies_with_only_lei)\n",
+    "total_companies_without_identifiers = len(companies_with_neither)\n",
+    "\n",
+    "# Print the analysis\n",
+    "print(f\"Total unique companies in the SBTi database: {total_companies_in_sbti}\")\n",
+    "print(f\"Total companies with targets in SBTi database: {total_companies_with_targets}\")\n",
+    "print(f\"Total unique ISINs with targets: {len(all_isin_set)}\")\n",
+    "print(f\"Total unique LEIs with targets: {len(all_lei_set)}\")\n",
+    "print(f\"Companies with targets with both ISIN and LEI: {total_companies_with_both}\")\n",
+    "print(f\"Companies with targets with only ISIN (no LEI): {total_companies_with_only_isin}\")\n",
+    "print(f\"Companies with targets with only LEI (no ISIN): {total_companies_with_only_lei}\")\n",
+    "print(f\"Companies with targets but no LEI or ISIN: {total_companies_without_identifiers}\")\n",
+    "\n",
+    "# Verification\n",
+    "calculated_total = (total_companies_with_both + \n",
+    "                   total_companies_with_only_isin + \n",
+    "                   total_companies_with_only_lei + \n",
+    "                   total_companies_without_identifiers)\n",
+    "print(f\"Sum of all categories: {calculated_total}\")\n",
+    "print(f\"Matches total companies with targets: {calculated_total == total_companies_with_targets}\")"
    ]
   },
   {
@@ -234,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -243,11 +330,16 @@
    "outputs": [],
    "source": [
     "# Convert the \"Date Published\" column to datetime type\n",
-    "df_targets = df_nt_targets.copy()\n",
-    "df_targets['Date Published'] = pd.to_datetime(df_targets['Date Published'])\n",
+    "df_targets = companies_with_targets.copy()  \n",
+    "df_targets['date_published'] = pd.to_datetime(df_targets['date_published'])\n",
+    "\n",
     "# Filter rows based on user-entered date\n",
-    "filtered_df = df_targets.loc[df_targets['Date Published'] <= user_date]\n",
-    "filtered_df = filtered_df[filtered_df['ISIN'].notnull() & filtered_df['LEI'].notnull()]"
+    "filtered_df = df_targets.loc[df_targets['date_published'] <= user_date]\n",
+    "filtered_df = filtered_df[filtered_df['isin'].notnull() | filtered_df['lei'].notnull()]  \n",
+    "\n",
+    "# Create a set of company names from the filtered SBTi data\n",
+    "filtered_df['company_name_lower'] = filtered_df['company_name'].str.lower()\n",
+    "company_name_set = set(filtered_df['company_name_lower'].dropna())"
    ]
   },
   {
@@ -260,19 +352,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "is_executing": false
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "isin_set = set(filtered_df['ISIN'])\n",
-    "lei_set = set(filtered_df['LEI'])\n",
+    "# APPROACH 1: Original matching method (keep this unchanged)\n",
+    "isin_set = set(filtered_df['isin'])\n",
+    "lei_set = set(filtered_df['lei'])\n",
     "\n",
-    "# Function to check if ISIN or LEI is validated\n",
+    "# Function to check if ISIN, LEI, or company name is validated\n",
     "def is_validated(row):\n",
-    "    return row['ISIN'] in isin_set or row['LEI'] in lei_set\n",
+    "    # First check LEI \n",
+    "    if pd.notna(row.get('lei')) and row.get('lei') in all_lei_set:\n",
+    "        return True\n",
+    "    \n",
+    "    # Then check ISIN \n",
+    "    if pd.notna(row.get('isin')) and row.get('isin') in all_isin_set:\n",
+    "        return True\n",
+    "    \n",
+    "    # Finally check company name \n",
+    "    if pd.notna(row.get('company_name')):\n",
+    "        company_name_lower = row.get('company_name').lower()\n",
+    "        if company_name_lower in company_name_set:\n",
+    "            return True\n",
+    "    \n",
+    "    # If none of the conditions are met\n",
+    "    return False\n",
     "\n",
     "# Apply the function to create the 'validated' column\n",
     "df_portfolio['validated'] = df_portfolio.apply(is_validated, axis=1)"
@@ -313,6 +417,58 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Print the Total and Validated Investment Values\n",
+    "total_investment_weight = df_portfolio[\"investment_value\"].sum()\n",
+    "validated_investment_sum = df_portfolio.loc[df_portfolio[\"validated\"] == True, \"investment_value\"].sum()\n",
+    "\n",
+    "print(f\"Total Investment Value: {total_investment_weight:,.2f}\")\n",
+    "print(f\"Validated Investment Value: {validated_investment_sum:,.2f}\")\n",
+    "print(f\"Percentage of Portfolio Value with Validated Targets: {(validated_investment_sum/total_investment_weight)*100:.2f}%\")\n",
+    "print(f\"Total Companies in Portfolio: {len(df_portfolio)}\")\n",
+    "print(f\"Validated Companies: {df_portfolio['validated'].sum()}\")\n",
+    "print(f\"Percentage of Companies with Validated Targets: {(df_portfolio['validated'].sum()/len(df_portfolio))*100:.2f}%\")\n",
+    "\n",
+    "#Show the first few validated companies\n",
+    "print(\"\\nSample of companies with validated targets:\")\n",
+    "print(df_portfolio[df_portfolio[\"validated\"] == True][[\"company_name\", \"investment_value\", \"validated\"]].head(10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Updated counting function to test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distinct_company_count = df_portfolio['company_name'].nunique()\n",
+    "validated_companies = df_portfolio[df_portfolio['validated']]['company_name'].nunique()\n",
+    "\n",
+    "print(f\"Total Distinct Companies: {distinct_company_count}\")\n",
+    "print(f\"Distinct Validated Companies: {validated_companies}\")\n",
+    "print(f\"Percentage of Distinct Companies with Validated Targets: {(validated_companies/distinct_company_count)*100:.2f}%\")\n",
+    "\n",
+    "# Original counting method - counts rows, not necessarily distinct companies\n",
+    "print(f\"Total Portfolio Rows: {len(df_portfolio)}\")\n",
+    "print(f\"Validated Rows: {df_portfolio['validated'].sum()}\")\n",
+    "print(f\"Percentage of Rows with Validated Targets: {(df_portfolio['validated'].sum()/len(df_portfolio))*100:.2f}%\")\n",
+    "\n",
+    "#Show the first few validated companies\n",
+    "print(\"\\nSample of companies with validated targets:\")\n",
+    "print(df_portfolio[df_portfolio[\"validated\"] == True][[\"company_name\", \"investment_value\", \"validated\"]].head(10))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -332,7 +488,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -346,7 +502,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.6"
   },
   "pycharm": {
    "stem_cell": {
