Update to TR tool ingestion and target assessment logic

--- a/examples/1_analysis_example.ipynb
+++ b/examples/1_analysis_example.ipynb
@@ -144,8 +144,7 @@
     "\n",
     "#### Company identifiers\n",
     "\n",
-    "Company name, ISIC (International Standard Industrial Classification) sector classification, and ISIN (if relevant) or other\n",
-    "company identifier are required to be fed into the tool.\n",
+    "Company name, ISIC (International Standard Industrial Classification) sector classification, and ISIN (if relevant) or a company name exactly matching one in the SBTi Companies Taking Action table are required to be fed into the tool.\n",
     "\n",
     "#### Corporate GHG targets\n",
     "\n",
@@ -178,6 +177,18 @@
     "e. Total assets\n",
     "\n",
     "f. Revenue\n",
+    "\n",
+    "\n",
+    "#### Data format requirements\n",
+    "\n",
+    "The portfolio should at least have the following column names:\n",
+    "company_name: Name of the company in your portfolio - each row must have a unique name\n",
+    "company_id: Unique identifier for the company in your portfolio\n",
+    "isin: The ISIN of the company in your portfolio (will be renamed to 'isin' if in old format)\n",
+    "lei: Legal Entity Identifier for the company (will be renamed to 'lei' if in old format)\n",
+    "investment_value: Needed to weight the portfolio coverage by the value of the investment\n",
+    "engagement_target: Not needed for the tool to run but is included to be compatible with the tool format\n",
+    "\n",
     "\n",
     "Refer to [Data Requirements](https://ofbdabv.github.io/SBTi/DataRequirements.html#) for full documentation.\n",
     "Also refer to the full methodology for [temperature scoring](https://sciencebasedtargets.org/wp-content/uploads/2020/09/Temperature-Rating-Methodology-V1.pdf)."
@@ -388,9 +399,17 @@
     "\n",
     "In this example, the portfolio data is stored as a CSV file. If you wish to replace the portfolio file with your own portfolio file,\n",
     "your CSV file should at least have a \"company_id\" column (the identifier of the company) and a \"investment value\" column (the amount\n",
-    "of money invested in each of the companies in your portfolio e.g. the value of the shares you hold). Please refer to [Data Requirements](https://sciencebasedtargets.github.io/SBTi/DataRequirements.html#) for a full description of the data and formats needed.\n",
+    "of money invested in each of the companies in your portfolio e.g. the value of the shares you hold). The portfolio should at least have the following column names:\n",
+    "- company_name: Name of the company in your portfolio\n",
+    "- company_id: Unique identifier for the company\n",
+    "- isin: The ISIN of the company (formerly company_isin)\n",
+    "- lei: Legal Entity Identifier (formerly company_lei)\n",
+    "- investment_value: Value of investments for weighting\n",
+    "\n",
+    "\n",
+    "Please refer to [Data Requirements](https://sciencebasedtargets.github.io/SBTi/DataRequirements.html#) for a full description of the data and formats needed.\n",
     "To change the portfolio file, follow the same steps as for the data provider, described above.\n",
-    "Next, change the file location between the quotes below: replace '`example_portfolio`' with your_filename (don't remove the double quotes in the cell below)."
+    "Next, change the file location between the quotes below: replace '`example_portfolio`' with your_filename (don't remove the double quotes in the cell below).\n"
    ]
   },
   {
@@ -404,7 +423,21 @@
    },
    "outputs": [],
    "source": [
-    "portfolio = pd.read_csv(\"data/example_portfolio.csv\", encoding=\"iso-8859-1\")"
+    "portfolio = pd.read_csv(\"data/example_portfolio.csv\", encoding=\"iso-8859-1\")\n",
+    "\n",
+    "# Change the column names to match the new SBTi Data Dictionary\n",
+    "portfolio.rename(columns={\n",
+    "    'company_isin': 'isin', \n",
+    "    'company_lei': 'lei'\n",
+    "}, inplace=True)\n",
+    "\n",
+    "# Check for duplicate values in the 'company_id' column\n",
+    "duplicate_ids = portfolio[portfolio.duplicated('company_id', keep=False)]\n",
+    "if not duplicate_ids.empty:\n",
+    "    print(\"Error: Duplicate values found in the 'company_id' column:\")\n",
+    "    print(duplicate_ids)\n",
+    "else:\n",
+    "    print(\"No duplicate values found in the 'company_id' column.\")"
    ]
   },
   {
@@ -426,6 +459,24 @@
    "outputs": [],
    "source": [
     "portfolio.head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The next cell filters out all applicable target statuses to be considered in target validation functions according to the new SBTi structure."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils import add_target_flag\n",
+    "\n",
+    "portfolio = add_target_flag(portfolio)\n"
    ]
   },
   {
