--- a/examples/2_quick_temp_score_calculation.ipynb
+++ b/examples/2_quick_temp_score_calculation.ipynb
@@ -134,7 +134,7 @@
    "metadata": {},
    "source": [
     "## Load your portfolio\n",
-    "In our case the portfolio is stored as a CSV file. The portfolio should at least have an \"id\" (the identifier of the company) and a \"proportion\" (the weight of the company in your portfolio e.g. the value of the shares you hold) column.\n",
+    "In our case the portfolio is stored as a CSV file. The portfolio should at least have an \"company_id\" (the identifier of the company) and a \"proportion\" (the weight of the company in your portfolio e.g. the value of the shares you hold) column.\n",
     "\n",
     "Please see the technical documentation on [Data Legends](https://sciencebasedtargets.github.io/SBTi/Legends.html#) for details on data requirements. "
    ]
@@ -149,7 +149,34 @@
    },
    "outputs": [],
    "source": [
-    "df_portfolio = pd.read_csv(\"data/example_portfolio.csv\", encoding=\"iso-8859-1\")"
+    "df_portfolio = pd.read_csv(\"data/example_portfolio.csv\", encoding=\"iso-8859-1\")\n",
+    "\n",
+    "# Change the column names to match the new SBTi CTA format\n",
+    "portfolio = portfolio.rename(columns={\n",
+    "    \"Company Name\": \"company_name\",\n",
+    "    \"ISIN\": \"isin\",\n",
+    "    \"LEI\": \"lei\",\n",
+    "    \"Sector\": \"sector\",\n",
+    "    \"Target\": \"full_target_language\",\n",
+    "    \"Net-Zero Committed\": \"net_zero_status\",\n",
+    "    \"Near term - Target Status\": \"near_term_status\",\n",
+    "    \"Target Classification\": \"target_classification_long\",\n",
+    "    \"Extension\": \"reason_for_extension_or_removal\",\n",
+    "    \"Date\": \"date_updated\"\n",
+    "})\n",
+    "\n",
+    "#from utils import add_target_flag\n",
+    "#\n",
+    "#portfolio = add_target_flag(portfolio)\n",
+    "\n",
+    "\n",
+    "# Check for duplicate values in the 'company_id' column\n",
+    "duplicate_ids = df_portfolio[df_portfolio.duplicated('company_id', keep=False)]\n",
+    "if not duplicate_ids.empty:\n",
+    "    print(\"Error: Duplicate values found in the 'company_id' column:\")\n",
+    "    print(duplicate_ids)\n",
+    "else:\n",
+    "    print(\"No duplicate values found in the 'company_id' column.\")"
    ]
   },
   {
