--- a/examples/4b_portfolio_agg_readymade_TS.ipynb
+++ b/examples/4b_portfolio_agg_readymade_TS.ipynb
@@ -88,6 +88,13 @@
    "outputs": [],
    "source": [
     "df_portfolio = pd.read_excel(\"data/example_data_provider_TS.xlsx\")\n",
+    "\n",
+    "# Change the column names to match the API if they aren't already in snake_case\n",
+    "if 'ISIN' in df_portfolio.columns:\n",
+    "    df_portfolio.rename(columns={'ISIN': 'isin'}, inplace=True)\n",
+    "if 'LEI' in df_portfolio.columns:\n",
+    "    df_portfolio.rename(columns={'LEI': 'lei'}, inplace=True)\n",
+    "\n",
     "# Convert the scope and time_frame columns to enums (EScope and ETimeFrames)\n",
     "df_portfolio['scope'] = df_portfolio['scope'].apply(lambda x: EScope[x.upper()])\n",
     "df_portfolio['time_frame'] = df_portfolio['time_frame'].apply(lambda x: ETimeFrames[x.upper()])\n",
