--- a/examples/5_reporting.ipynb
+++ b/examples/5_reporting.ipynb
@@ -159,7 +159,21 @@
    },
    "outputs": [],
    "source": [
-    "portfolio = pd.read_csv(\"data/example_portfolio.csv\", encoding=\"iso-8859-1\")"
+    "portfolio = pd.read_csv(\"data/example_portfolio.csv\", encoding=\"iso-8859-1\")\n",
+    "\n",
+    "# Change the column names\n",
+    "portfolio.rename(columns={\n",
+    "    'company_isin': 'isin', \n",
+    "    'company_lei': 'lei'\n",
+    "}, inplace=True)\n",
+    "\n",
+    "# Check for duplicate values in the 'company_id' column\n",
+    "duplicate_ids = portfolio[portfolio.duplicated('company_id', keep=False)]\n",
+    "if not duplicate_ids.empty:\n",
+    "    print(\"Error: Duplicate values found in the 'company_id' column:\")\n",
+    "    print(duplicate_ids)\n",
+    "else:\n",
+    "    print(\"No duplicate values found in the 'company_id' column.\")"
    ]
   },
   {
