--- a/examples/3_what-if-analysis.ipynb
+++ b/examples/3_what-if-analysis.ipynb
@@ -78,6 +78,33 @@
    "source": [
     "provider = ExcelProvider(path=\"data/data_provider_example.xlsx\")\n",
     "df_portfolio = pd.read_csv(\"data/example_portfolio.csv\", encoding=\"iso-8859-1\")\n",
+    "\n",
+    "# Change the column names \n",
+    "portfolio = portfolio.rename(columns={\n",
+    "    \"Company Name\": \"company_name\",\n",
+    "    \"ISIN\": \"isin\",\n",
+    "    \"LEI\": \"lei\",\n",
+    "    \"Sector\": \"sector\",\n",
+    "    \"Target\": \"full_target_language\",\n",
+    "    \"Net-Zero Committed\": \"net_zero_status\",\n",
+    "    \"Near term - Target Status\": \"near_term_status\",\n",
+    "    \"Target Classification\": \"target_classification_long\",\n",
+    "    \"Extension\": \"reason_for_extension_or_removal\",\n",
+    "    \"Date\": \"date_updated\"\n",
+    "})\n",
+    "\n",
+    "#from utils import add_target_flag\n",
+    "#\n",
+    "#portfolio = add_target_flag(portfolio)\n",
+    "\n",
+    "# Check for duplicate values in the 'company_id' column\n",
+    "duplicate_ids = df_portfolio[df_portfolio.duplicated('company_id', keep=False)]\n",
+    "if not duplicate_ids.empty:\n",
+    "    print(\"Error: Duplicate values found in the 'company_id' column:\")\n",
+    "    print(duplicate_ids)\n",
+    "else:\n",
+    "    print(\"No duplicate values found in the 'company_id' column.\")\n",
+    "\n",
     "companies = SBTi.utils.dataframe_to_portfolio(df_portfolio)\n",
     "portfolio_data = SBTi.utils.get_data([provider], companies)\n",
     "scenarios = {}"
