Changes made to how targets are identified and package requirements were updated.

--- a/examples/2_quick_temp_score_calculation.ipynb
+++ b/examples/2_quick_temp_score_calculation.ipynb
@@ -165,9 +165,9 @@
     "    \"Date\": \"date_updated\"\n",
     "})\n",
     "\n",
-    "#from utils import add_target_flag\n",
-    "#\n",
-    "#portfolio = add_target_flag(portfolio)\n",
+    "#Add in target data available from ISIN, LEI, or Company Name match\n",
+    "from utils import add_target_flag\n",
+    "portfolio = add_target_flag(portfolio)\n",
     "\n",
     "\n",
     "# Check for duplicate values in the 'company_id' column\n",
