--- a/examples/3_what-if-analysis.ipynb
+++ b/examples/3_what-if-analysis.ipynb
@@ -93,9 +93,9 @@
     "    \"Date\": \"date_updated\"\n",
     "})\n",
     "\n",
-    "#from utils import add_target_flag\n",
-    "#\n",
-    "#portfolio = add_target_flag(portfolio)\n",
+    "#Add in target data available from ISIN, LEI, or Company Name match\n",
+    "from utils import add_target_flag\n",
+    "portfolio = add_target_flag(portfolio)\n",
     "\n",
     "# Check for duplicate values in the 'company_id' column\n",
     "duplicate_ids = df_portfolio[df_portfolio.duplicated('company_id', keep=False)]\n",
