--- a/examples/4b_portfolio_agg_readymade_TS.ipynb
+++ b/examples/4b_portfolio_agg_readymade_TS.ipynb
@@ -95,6 +95,10 @@
     "if 'LEI' in df_portfolio.columns:\n",
     "    df_portfolio.rename(columns={'LEI': 'lei'}, inplace=True)\n",
     "\n",
+    "#Add in target data available from ISIN, LEI, or Company Name match\n",
+    "from utils import add_target_flag\n",
+    "portfolio = add_target_flag(portfolio)\n",
+    "\n",
     "# Convert the scope and time_frame columns to enums (EScope and ETimeFrames)\n",
     "df_portfolio['scope'] = df_portfolio['scope'].apply(lambda x: EScope[x.upper()])\n",
     "df_portfolio['time_frame'] = df_portfolio['time_frame'].apply(lambda x: ETimeFrames[x.upper()])\n",
