--- a/examples/5_reporting.ipynb
+++ b/examples/5_reporting.ipynb
@@ -167,6 +167,11 @@
     "    'company_lei': 'lei'\n",
     "}, inplace=True)\n",
     "\n",
+    "#Add in target data available from ISIN, LEI, or Company Name match\n",
+    "from utils import add_target_flag\n",
+    "portfolio = add_target_flag(portfolio)\n",
+    "\n",
+    "\n",
     "# Check for duplicate values in the 'company_id' column\n",
     "duplicate_ids = portfolio[portfolio.duplicated('company_id', keep=False)]\n",
     "if not duplicate_ids.empty:\n",
