Update to TR tool ingestion and target assessment logic

--- a/examples/5_reporting.ipynb
+++ b/examples/5_reporting.ipynb
@@ -88,7 +88,7 @@
     "    os.mkdir(\"data\")\n",
     "if not os.path.isfile(\"data/data_provider_example.xlsx\"):\n",
     "    urllib.request.urlretrieve(\"https://github.com/ScienceBasedTargets/SBTi-finance-tool/raw/main/examples/data/data_provider_example.xlsx\", \"data/data_provider_example.xlsx\")\n",
-    "if not os.path.isfile(\"data/example_portfolio.csv\"):\n",
+    "if not os.path.isfile(\"examples/data/(Attached 2) portfolio data_equity.csv\"):\n",
     "    urllib.request.urlretrieve(\"https://github.com/ScienceBasedTargets/SBTi-finance-tool/raw/main/examples/data/example_portfolio.csv\", \"data/example_portfolio.csv\")\n",
     "if not os.path.isfile(\"utils.py\"):\n",
     "    urllib.request.urlretrieve(\"https://github.com/ScienceBasedTargets/SBTi-finance-tool/raw/main/examples/utils.py\", \"utils.py\")\n",
@@ -166,10 +166,6 @@
     "    'company_isin': 'isin', \n",
     "    'company_lei': 'lei'\n",
     "}, inplace=True)\n",
-    "\n",
-    "#Add in target data available from ISIN, LEI, or Company Name match\n",
-    "from utils import add_target_flag\n",
-    "portfolio = add_target_flag(portfolio)\n",
     "\n",
     "\n",
     "# Check for duplicate values in the 'company_id' column\n",
@@ -433,7 +429,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -447,7 +443,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.12.7"
   },
   "pycharm": {
    "stem_cell": {
