--- a/examples/Simple_portfolio_coverage.ipynb
+++ b/examples/Simple_portfolio_coverage.ipynb
@@ -104,8 +104,7 @@
     "#df_portfolio = pd.read_excel(\"data/example_portfolio.xlsx\", engine=\"openpyxl\") # .xlsx format\n",
     "\n",
     "#Use your local file instead\n",
-    "#my_file_path = \"path/to/your/portfolio_file.csv\"\n",
-    "my_file_path = \"/Users/hunterbell/Code/SBTi FI Tool/SBTi-finance-tool/examples/data/example_portfolio.csv\"\n",
+    "my_file_path = \"path/to/your/portfolio_file.csv\"\n",
     "df_portfolio = pd.read_csv(my_file_path, encoding=\"utf-8\")"
    ]
   },
@@ -147,8 +146,8 @@
    },
    "outputs": [],
    "source": [
-    "# Change the column names to match the API if the snakecase conversion did not work\n",
-    "#df_portfolio.rename(columns={'Company Name': 'company_name', 'ISIN': 'isin'}, inplace=True)\n",
+    "# Change the column names to match the CTA Table if the snakecase conversion did not work\n",
+    "#df_portfolio.rename(columns={'Company Name': 'company_name', 'ISIN': 'isin', 'LEI': 'lei'}, inplace=True)\n",
     "\n",
     "\n",
     "# Check for duplicate values in the 'company_id' column\n",
