--- a/examples/1_analysis_example.ipynb
+++ b/examples/1_analysis_example.ipynb
@@ -388,7 +388,8 @@
    },
    "outputs": [],
    "source": [
-    "provider = ExcelProvider(path=\"data/data_provider_example.xlsx\")"
+    "\n",
+    "provider = ExcelProvider (\"data/data_provider_example.xlsx\")"
    ]
   },
   {
@@ -459,24 +460,6 @@
    "outputs": [],
    "source": [
     "portfolio.head(5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The next cell filters out all applicable target statuses to be considered in target validation functions according to the new SBTi structure."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from utils import add_target_flag\n",
-    "\n",
-    "portfolio = add_target_flag(portfolio)\n"
    ]
   },
   {
@@ -629,6 +612,21 @@
     "In this example, we use the mid-term timeframe and the S1S2 & S1S2S3 scopes to calculate the aggregated company temperature scores. The default temperature score is 3.2.\n",
     "\n",
     "For more information about all fields shown in the output, please refer to [Data Legends](https://ofbdabv.github.io/SBTi/Legends.html#)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find the location of the filter_cta_file method\n",
+    "import inspect\n",
+    "from SBTi.data.sbti import SBTi\n",
+    "\n",
+    "sbti_class = SBTi\n",
+    "method_source = inspect.getsource(sbti_class.filter_cta_file)\n",
+    "print(method_source)"
    ]
   },
   {
@@ -1177,7 +1175,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1191,7 +1189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.7"
   },
   "pycharm": {
    "stem_cell": {
