--- a/examples/2_quick_temp_score_calculation.ipynb
+++ b/examples/2_quick_temp_score_calculation.ipynb
@@ -149,7 +149,7 @@
    },
    "outputs": [],
    "source": [
-    "df_portfolio = pd.read_csv(\"data/example_portfolio.csv\", encoding=\"iso-8859-1\")\n",
+    "portfolio = pd.read_csv(\"data/example_portfolio.csv\", encoding=\"iso-8859-1\")\n",
     "\n",
     "# Change the column names to match the new SBTi CTA format\n",
     "portfolio = portfolio.rename(columns={\n",
@@ -164,11 +164,6 @@
     "    \"Extension\": \"reason_for_extension_or_removal\",\n",
     "    \"Date\": \"date_updated\"\n",
     "})\n",
-    "\n",
-    "#Add in target data available from ISIN, LEI, or Company Name match\n",
-    "from utils import add_target_flag\n",
-    "portfolio = add_target_flag(portfolio)\n",
-    "\n",
     "\n",
     "# Check for duplicate values in the 'company_id' column\n",
     "duplicate_ids = df_portfolio[df_portfolio.duplicated('company_id', keep=False)]\n",
@@ -316,7 +311,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -330,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.7"
   },
   "pycharm": {
    "stem_cell": {
