--- a/examples/3_what-if-analysis.ipynb
+++ b/examples/3_what-if-analysis.ipynb
@@ -80,7 +80,7 @@
     "df_portfolio = pd.read_csv(\"data/example_portfolio.csv\", encoding=\"iso-8859-1\")\n",
     "\n",
     "# Change the column names \n",
-    "portfolio = portfolio.rename(columns={\n",
+    "df_portfolio = df_portfolio.rename(columns={\n",
     "    \"Company Name\": \"company_name\",\n",
     "    \"ISIN\": \"isin\",\n",
     "    \"LEI\": \"lei\",\n",
@@ -92,10 +92,6 @@
     "    \"Extension\": \"reason_for_extension_or_removal\",\n",
     "    \"Date\": \"date_updated\"\n",
     "})\n",
-    "\n",
-    "#Add in target data available from ISIN, LEI, or Company Name match\n",
-    "from utils import add_target_flag\n",
-    "portfolio = add_target_flag(portfolio)\n",
     "\n",
     "# Check for duplicate values in the 'company_id' column\n",
     "duplicate_ids = df_portfolio[df_portfolio.duplicated('company_id', keep=False)]\n",
@@ -453,7 +449,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -467,7 +463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.12.7"
   },
   "pycharm": {
    "stem_cell": {
