--- a/examples/5_reporting.ipynb
+++ b/examples/5_reporting.ipynb
@@ -88,7 +88,7 @@
     "    os.mkdir(\"data\")\n",
     "if not os.path.isfile(\"data/data_provider_example.xlsx\"):\n",
     "    urllib.request.urlretrieve(\"https://github.com/ScienceBasedTargets/SBTi-finance-tool/raw/main/examples/data/data_provider_example.xlsx\", \"data/data_provider_example.xlsx\")\n",
-    "if not os.path.isfile(\"examples/data/(Attached 2) portfolio data_equity.csv\"):\n",
+    "if not os.path.isfile(\"data/example_portfolio.csv\"):\n",
     "    urllib.request.urlretrieve(\"https://github.com/ScienceBasedTargets/SBTi-finance-tool/raw/main/examples/data/example_portfolio.csv\", \"data/example_portfolio.csv\")\n",
     "if not os.path.isfile(\"utils.py\"):\n",
     "    urllib.request.urlretrieve(\"https://github.com/ScienceBasedTargets/SBTi-finance-tool/raw/main/examples/utils.py\", \"utils.py\")\n",
